v.0001 Duel Creatures
- Created Placeholder card
- Designed Player Board (Good for android)
- Card Factory and Some Assets
- Utilize Session and InputProvider
- Initial Board state (Except Guard Zone)
- Initial HUD for mulligan
- Shows first draw
- Implemented player mulligan
- Created SelectCardsFromHand input
- Implemented opponent AI Mulligan
- Implemented Player Ride phase
- Base writing Player Main Phase
- Created CardBaseComponent to refactor code
- Cleaned up all nullable warnings
- Rearguard and Hand handling of Card Draggable state
- Fixed MulliganPhase dragging where you cannot drag on top of already selected cards
- Implemented Swap rearguards
- Implemented AI Ride